<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/material_card_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/search_input_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:theme="@style/textCursorStyle"
			app:hintTextColor="@color/grey"
			app:startIconDrawable="@android:drawable/ic_menu_search"
			app:startIconTint="@color/grey">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/search_input_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:hint="@string/input_keyword_search_input_hint"
				android:imeOptions="actionSearch"
				android:inputType="text"
				android:textSize="15sp"
				tools:ignore="VisualLintTextFieldSize" />
		</com.google.android.material.textfield.TextInputLayout>
	</com.google.android.material.card.MaterialCardView>

	<include
		android:id="@+id/search_parameters"
		layout="@layout/layout_search_parameters"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@+id/material_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
