...
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp">

			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/item_restaurant_image_view"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:importantForAccessibility="no"
				app:imageUrl="@{restaurant.photo.pc.l}"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
...
